code refactored and added requetUUID in all responses